# vulkan

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  toolchain.cmake  vulkan-renderer.cppm
shaders/: colored-triangle.frag  colored-triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  pbr.frag  pbr.vert  textured.frag
src/: assets.cppm  camera.cppm  gltf.cpp  gltf.cppm  img-processing.cppm  main.cpp  mesh-loading.cppm  meshes.cppm  models.cpp  models.cppm  normalized-types.cppm  types.cppm  user-input.cppm  util.cppm  vertex-buffer-attribute-types.cppm  vulkan-engine.cpp  vulkan-engine.cppm  vulkan-renderer.cppm  vulkan-renderer2.cppm  vulkan-util.cpp  vulkan-util.cppm
